# soil

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: docs.yml
crates/soil_core/: Cargo.toml  README.md
crates/soil_core/examples/: minimal_sim.rs
crates/soil_core/src/: atom.rs  bond.rs  comm.rs  domain.rs  group.rs  lib.rs  neighbor.rs  precision.rs  region.rs  schedule.rs  vec3.rs  virial.rs
crates/soil_core/src/input/: mod.rs
crates/soil_deform/: Cargo.toml  README.md
crates/soil_deform/src/: lib.rs
crates/soil_derive/: Cargo.toml  README.md
crates/soil_derive/src/: lib.rs
crates/soil_fixes/: Cargo.toml  README.md
crates/soil_fixes/src/: lib.rs
crates/soil_gpu/: Cargo.toml  GPU_ARCHITECTURE.md
crates/soil_gpu/src/: boundary.rs  cell_list.rs  cell_list.wgsl  coherence.rs  gpu_state.rs  lib.rs  neighbor_slots.rs  plugin.rs  resident.wgsl  resident_aux.wgsl  verlet.wgsl
crates/soil_print/: Cargo.toml  README.md
crates/soil_print/examples/: output_wiring.rs
crates/soil_print/src/: lib.rs
crates/soil_verlet/: Cargo.toml  README.md
crates/soil_verlet/examples/: free_fall.rs
crates/soil_verlet/src/: lib.rs
docs/: PERF_COMM_NEIGHBOR.md  SOIL_ATOMDATA_CONTRACT.md  book.toml
docs/_planning/: soil_core.md  soil_deform.md  soil_derive.md  soil_fixes.md  soil_print.md  soil_verlet.md
docs/src/: SUMMARY.md  introduction.md
docs/src/reference/: config.md  crates.md  internals.md
docs/src/substrate/: atomdata-contract.md  deformation.md  fixes.md  integration.md  what-soil-owns.md  writing-atomdata.md
docs/src/tutorial/: field-attributes.md  write-your-own-physics.md
