[package]
name = "soil_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Core simulation infrastructure: TOML config, domain decomposition, MPI communication, atom data structures"
keywords = ["dem", "simulation", "mpi", "domain-decomposition"]
categories = ["simulation", "science"]

[features]
default = ["mpi_backend", "precision-double"]
mpi_backend = ["grass_mpi/mpi_backend"]

# Mutually-exclusive precision configs (see src/precision.rs). Exactly one must
# be active; the default feature set selects `precision-double`.
precision-double = []
precision-mixed = []
precision-single = []

[dependencies]
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_app = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_mpi = { git = "https://github.com/SueHeir/grass.git", branch = "main", default-features = false }
grass_derive = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_io = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.9"
