[package]
name = "soil_deform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Box deformation fix (erate, vel, final) for SOIL — triaxial compression, oedometer tests"
keywords = ["deform", "compression", "triaxial", "geomechanics", "dem"]
categories = ["simulation", "science"]

[features]
# Forward the precision config to soil_core. Exactly one must be active.
default = ["precision-mixed"]
precision-double = ["soil_core/precision-double"]
precision-mixed = ["soil_core/precision-mixed"]
precision-single = ["soil_core/precision-single"]

[dependencies]
soil_core = { path = "../soil_core", version = "0.1.3", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
serde = { version = "1", features = ["derive"] }
