[package]
name = "soil_fixes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Method-agnostic position/velocity constraints for SOIL (e.g. pin)"
keywords = ["constraint", "fix", "dem", "simulation"]
categories = ["simulation", "science"]

[dependencies]
soil_core = { path = "../soil_core", version = "0.1.3", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
serde = { version = "1", features = ["derive"] }
