[package]
name = "soil_gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GPU (wgpu/Metal) compute kernels for SOIL — f32 single-precision integration"
keywords = ["gpu", "wgpu", "dem", "simulation"]
categories = ["simulation", "science"]

[features]
# Forward the precision config to soil_core. The GPU kernels are always f32
# (Apple GPUs have no f64); the feature only affects host-side Atom storage.
default = ["precision-mixed"]
precision-double = ["soil_core/precision-double", "soil_verlet/precision-double"]
precision-mixed = ["soil_core/precision-mixed", "soil_verlet/precision-mixed"]
precision-single = ["soil_core/precision-single", "soil_verlet/precision-single"]

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
pollster = "0.4.0"
soil_core = { path = "../soil_core", version = "0.1.3", default-features = false }
soil_verlet = { path = "../soil_verlet", version = "0.1.3", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
wgpu = "29.0.3"
