[package]
name = "soil_print"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Output systems for SOIL: thermo, VTP visualization, dump files, restart files"
keywords = ["output", "vtk", "dem", "simulation"]
categories = ["simulation", "science"]

[dependencies]
soil_core = { path = "../soil_core", version = "0.1.3", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_json = "1"
