[package]
name = "soil_print"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Output systems for SOIL: thermo, VTP visualization, dump files, restart files"
keywords = ["output", "vtk", "dem", "simulation"]
categories = ["simulation", "science"]

[features]
# Forward the precision config to soil_core. Exactly one must be active.
default = ["precision-double"]
precision-double = ["soil_core/precision-double"]
precision-mixed = ["soil_core/precision-mixed"]
precision-single = ["soil_core/precision-single"]

[dependencies]
soil_core = { path = "../soil_core", version = "0.1.3", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_json = "1"

[[example]]
name = "output_wiring"
required-features = ["precision-double"]
