[package]
name = "soil_verlet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Velocity Verlet translational integration for SOIL simulations"
keywords = ["verlet", "integration", "dem", "simulation"]
categories = ["simulation", "science"]

[dependencies]
soil_core = { path = "../soil_core", version = "0.1.3", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", branch = "main" }

[dev-dependencies]
