[package]
name = "soil_verlet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Velocity Verlet translational integration for SOIL simulations"
keywords = ["verlet", "integration", "dem", "simulation"]
categories = ["simulation", "science"]

[features]
# Forward the precision config to soil_core. Exactly one must be active; the
# default selects mixed (Real=f32, Accum=f64). See soil_core/src/precision.rs.
default = ["precision-mixed"]
precision-double = ["soil_core/precision-double"]
precision-mixed = ["soil_core/precision-mixed"]
precision-single = ["soil_core/precision-single"]

[dependencies]
soil_core = { path = "../soil_core", version = "0.1.3", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", branch = "main" }

[dev-dependencies]

[[example]]
name = "free_fall"
required-features = ["precision-double"]
